# dotcoin

./: .gitignore  LICENSE  README.md  pyproject.toml
dotcoin/: __main__.py
dotcoin/console/: __init__.py  actions.py  parser.py
dotcoin/context/: fetch.py  match.py  source.py
dotcoin/core/: abstract.py  error.py  types.py
dotcoin/queries/: common.py  index.py  markets.py  utility.py
dotcoin/sources/: __init__.py
dotcoin/sources/ccxt/: exchange.py  source.py  utility.py
dotcoin/tables/: book.py  index.py  ticker.py  utility.py
tests/: test_dotcoin.py
tests/queries/: resources.py  test_common.py  test_index.py  test_market.py
tests/sources/ccxt/: resources.py  test_ccxt_exchange.py  test_ccxt_source.py  test_ccxt_utility.py
tests/tables/: resources.py  test_index.py  test_markets.py  test_utility.py
