[tool.poetry]
name = "dotcoin"
version = "0.1.0"
description = "A lightweight currency tracker built with care, and Python."
authors = ["Orlando Ospino Sánchez <oroschz@outlook.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/oroschz/dotcoin"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.950"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
